--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header class="profile">
-            <p>name: auburnglass</p>
+            <p>name: auburn</p>
             <p>nickname : oidon</p>
             <p>考えをまとめる練習に本を中心にレビューしてます</p>
             <ul>
